fontend/includes/css/returnPolicy.css
* {
    padding: auto;
    margin: auto;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 18px;
    /* box-sizing: border-box; */
}

form {
    max-width: 600px;
    padding: 20px;
    background-color: #fff;

}

form label {
    display: flex;
    text-align: center;
    font-size: 1.5rem;
    font-weight: 600;
    color: #cb6947;
    background-color: #b0a8b9;
    border-radius: 20px;
    padding: 8px 18px;
    width: 90%;
}

form select.device-type {
    width: 100%;
    padding: 10px;
    margin-bottom: 20px;
    border: 1px solid #ddd;
    border-radius: 5px;
    font-size: 18px;
    background-color: #f9f9f9;
    color: #333;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    position: relative;
    cursor: pointer;
}

div {
    display: flex;
    gap: 0px;
    /* Khoảng cách giữa các nút */
    justify-content: center;
    /* Căn giữa theo chiều ngang */
    margin-top: 20px;
}

div button.sold-product {
    background-color: #ff9671;
    color: #fff;
    justify-content: center;
    font-size: 20px;
    font-weight: 800;
    border-radius: 10px;
    padding: 5px 20px;
}

div button.sold-product:hover {
    background-color: #ff6b3b;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

